package org.ting.pattern.builder.inter;

/**
 * 包装
 *
 * @author 张韧炼
 * @create 2019-07-02 下午2:15
 **/
public interface Packing {
    String pack();
}
